--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ env:
     - GOARCH=arm
 go:
   - "1.10"
+deploy:
+        provider: releases
+        api_key: "$GITHUB_OAUTH_TOKEN"
+        skip_cleanup: true
