--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,15 @@ language: go
 env:
   global:
   - GOARM=7
-  - GOARCH=mips64
+  - BUILD_GOARCH=mips64
+ matrix:
+    - BUILD_GOOS=linux
+    - BUILD_GOOS=darwin
+    - BUILD_GOOS=windows
 go:
 - '1.10'
 script:
-- go build
+- GOARCH=$BUILD_GOARCH GOOS=$BUILD_GOOS go build
 after_script:
 - ls -l $HOME/gopath/src/github.com/jormenjanssen/deploy
 deploy:
