--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: go
 env:
-  global:
-  - GOARM=7
-  - BUILD_GOARCH=mips64
- matrix:
-  - BUILD_GOOS=linux
-  - BUILD_GOOS=darwin
-  - BUILD_GOOS=windows
+- GIMME_OS=linux
+- GIMME_ARCH=arm
+- GIMME_GOARM=7
 go:
 - '1.10'
 script:
-- GOARCH=$BUILD_GOARCH GOOS=$BUILD_GOOS go build
+- go build -v
 after_script:
 - ls -l $HOME/gopath/src/github.com/jormenjanssen/deploy
 deploy:
